width overflow fix

--- a/style.css
+++ b/style.css
@@ -14,11 +14,10 @@ canvas {
 }
 
 main {
-    width: 100vw;
+    /* width: 100vw; */
     color: white;
     z-index: 99;
     position: absolute;
-    width: 100%;
     margin: 0px auto;
     padding: 120px 0px;
     
